fix layout bug for firefox 108
closes #504

adapted from witalihirsch/Mono-firefox-theme/caceed5c37909306266f97ab4a484c90a6d6d57b

--- a/theme/parts/popups.css
+++ b/theme/parts/popups.css
@@ -169,7 +169,6 @@ menuitem, menupopup menu,
 	border-radius: 6px !important;	
 	color: var(--gnome-toolbar-color) !important;
 	font: menu !important;
-	width: 100%;
 	padding: 4px 12px !important;
 	min-height: 32px !important;
 }
